--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,35 @@
   padding: 30px;  background-color: #f3f4f6;
   border-radius: 10px; 
 }
+
+.loader {
+  border: 8px solid rgba(255, 255, 255, 0.2); /* Light grey/white */
+  border-left-color: #ffffff; /* White */
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(360deg);
+  }
+}
+
+.loader-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.9); /* Black background with slight transparency */
+  z-index: 10;
+}
+
